--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="img/keksobooking.svg" alt="Keksobooking. Кексы по соседству" width="215" height="45">
     </div>
 
-    <section class="map map--faded">
+    <section class="map">
       <div class="map__pins">
         <div class="map__overlay">
           <h2 class="map__title">И снова Токио!</h2>
@@ -238,7 +238,7 @@
     </ul>
   </footer>
 
-  <template>
+	<template class="template">
     <article class="map__card popup">
       <img src="img/avatars/user01.png" class="popup__avatar" width="70" height="70" alt="Аватар пользователя">
       <button type="button" class="popup__close">Закрыть</button>
@@ -249,21 +249,24 @@
       <p class="popup__text popup__text--capacity">2 комнаты для 3 гостей</p>
       <p class="popup__text popup__text--time">Заезд после 14:00, выезд до 10:00</p>
       <ul class="popup__features">
+<!--
         <li class="popup__feature popup__feature--wifi"></li>
         <li class="popup__feature popup__feature--dishwasher"></li>
         <li class="popup__feature popup__feature--parking"></li>
         <li class="popup__feature popup__feature--washer"></li>
         <li class="popup__feature popup__feature--elevator"></li>
         <li class="popup__feature popup__feature--conditioner"></li>
+-->
       </ul>
       <p class="popup__description">Великолепная квартира-студия в центре Токио. Подходит как туристам, так и бизнесменам. Квартира полностью укомплектована и недавно отремонтирована.</p>
       <div class="popup__photos">
-        <img src="" class="popup__photo" width="45" height="40" alt="Фотография жилья">
+<!--        <img src="" class="popup__photo" width="45" height="40" alt="Фотография жилья">-->
       </div>
     </article>
 
-    <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
+<!--    <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>-->
   </template>
 
+	<script src="js/map.js"></script>
 </body>
 </html>
